<resources>
    <string name="app_name">Code Challenge</string>
    <string name="name">Name:</string>
    <string name="rank">#</string>
    <string name="best_language">Best language: %1$s (%2$s)</string>
    <string name="completed">Completed Challenges</string>
    <string name="authored">Authored Challenges</string>
    <string name="sort">Sort by rank</string>
    <string name="search">Search</string>
    <string name="languages">Languages:</string>

    <string name="category">Category:</string>
    <string name="url">URL:</string>
    <string name="created_by">Sensei:</string>
    <string name="description">Description:</string>
    <string name="total_attempts">Total Attempts:</string>
    <string name="total_completed">Total Completed:</string>
    <string name="total_stars">Total Stars:</string>
    <string name="vote_score">Vote Score:</string>

    <string name="back">Back</string>
</resources>
